Fixed css on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1,h2,h3,h4
 
 .header-section .linkRow
 {
-	width: 30%;
+	width: 40%;
 	font-size: 20px;
 	font-weight: 300;
 	margin: 0 auto;
@@ -78,12 +78,21 @@ h1,h2,h3,h4
 {
 	.header-section .linkRow
 	{
-		width: 100%;
+		width: 90%;
+	}
+
+	.header-section .linkRow .col-sm-4
+	{
+		padding-bottom: 10px;
 	}
 }
 
 @media screen and (max-width: 500px)
 {
+	.wrapper
+	{
+		padding: 0px;
+	}
 	.header-section h1
 	{
 		font-size: 35px;
